--- a/SocailMedia.html
+++ b/SocailMedia.html
@@ -97,6 +97,22 @@
             border-radius: 10%;
            }
        }
+       @media screen  and (max-width: 376px){
+           ul li{
+            margin: 0 0;
+            border-radius: 10%;
+            font-size: 20px;
+            height:50px;
+            width:50px;
+           }
+
+           ul li:hover::before
+       {  
+           filter: blur(3px);
+           transform: scale(1.1);
+           /* box-shadow: 0 0 15px #d35400; */
+       }
+       }
     </style>
 </head>
 <body>
