--- a/Myskills.html
+++ b/Myskills.html
@@ -107,14 +107,24 @@
    }
    @media screen and (max-width: 450px){
        .container{
-           grid-template-columns: repeat(2,170px);
+           grid-template-columns: repeat(2,200px);
+           margin: 10px;
            
        }
        h3{
            font-size: 1rem;
        }
    }
-
+   @media screen and (max-width: 400px){
+       .container{
+           grid-template-columns: repeat(2,170px);
+           margin: 10px;
+           
+       }
+       h3{
+           font-size: 1rem;
+       }
+   }
     </style>
 </head>
 <body>
