--- a/index.html
+++ b/index.html
@@ -5,35 +5,54 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PortFolio</title>
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,200&family=Zilla+Slab:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="Css/style.css">
     <link rel="stylesheet" href="Css/all.css">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+
+    <script>
+        $(document).ready(function () {
+            $('#icon').click(function () {
+                $('ul').toggleClass('show')
+            });
+        });
+    </script>
+
+
 </head>
 
 <body onload="setTimeout(myFunction,5000)">
     <div id="loader">
         <h1>Loading Akash PortFolio</h1>
     </div>
+
+    <!-- Scroll bottom to top Start -->
+    <i id="backtotop" class="fas fa-arrow-circle-up"></i>
+    <!-- Scroll bottom to top End -->
+
     <!-- header Start -->
     <section class="header">
         <nav>
+            <label class="logo"> Akash Khandelwal </label>
+            <ul>
+                <li class="active"><a href="#home">Home</a></li>
+                <li id="skill2"><a href="#myskills"> Skill</a></li>
+                <li><a href="#AboutMe">About Me</a></li>
+                <li id="Project2"><a href="#Project">Projects</a></li>
+                <li><a href="#contact">Contact</a></li>
 
-            <div class="menu">
+            </ul>
+            <label id="icon"> <i class="fas fa-bars"> </i></label>
 
-                <ul>
-                    <li class="active"><a href="#home">Home</a></li>
-                    <li id="skill2"><a href="#myskills"> Skill</a></li>
-                    <li><a href="#AboutMe">About Me</a></li>
-                    <li id="Project2"><a href="#Project">Projects</a></li>
-                    <li><a href="#contact">Contact</a></li>
 
-                </ul>
-
-            </div>
         </nav>
-        <video autoplay loop class="video-background" muted plays-inline>
-            <source src="Background.mp4" type="video/mp4">
-        </video>
+       
         <div id="mainhead">
             <h1>Welcome To My <span style="color:rgba(14, 105, 180, 0.877)">PortFolio!</span></h1>
         </div>
@@ -49,6 +68,13 @@
         <div class="SocialMedia">
             <h1>Connect With Me</h1>
             <iframe src="SocailMedia.html" frameborder="0" width="100%"></iframe>
+        </div>
+
+        <div class="Scrollbtn-main">
+         <a href="#AboutMe">  
+        <div class="Scrollbtn">  </div>
+        <div class="Scrollbtn">  </div>
+        <div class="Scrollbtn">  </div></a> 
         </div>
 
     </section>
@@ -107,7 +133,8 @@
                 <p>Made Virtual Desktop Assistant using Python and Used lot of library for make this Assistant
                     Convenient named "Alexa"(Wolfram Alpha,Open WeatherAPI,NewsAPI,Speech
                     Recognition,pysstx3,Wikipedia,etc.)<a
-                        href="https://github.com/Akashkhandelwal191/VirtualDesktopAssistant" target="newtab">Click to see My
+                        href="https://github.com/Akashkhandelwal191/VirtualDesktopAssistant" target="newtab">Click to
+                        see My
                         Project:3</a> </p>
             </div>
             <div class="Projectsub">
@@ -169,6 +196,17 @@
 
         }
 
+        function slideshow() {
+
+            var x = document.getElementById('check-class');
+            if (x.style.display === "none") {
+                x.style.display = "block";
+            } else {
+                x.style.display = "none";
+            }
+
+        }
+
     </script>
 
 
@@ -224,6 +262,23 @@
             xhr.send(data);
         }
     </script>
+
+
+    <script>
+
+        const topscroll = document.querySelector("#backtotop");
+        topscroll.addEventListener("click", function () {
+            window.scrollTo({
+                top: 0,
+                left: 0,
+                behavior: "smooth"
+
+            });
+        });
+
+
+    </script>
+
 </body>
 
 </html>
