--- a/SocailMedia.html
+++ b/SocailMedia.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="all.css">
+    <link rel="stylesheet" href="Css/all.css">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <style>
         *{
