Extra Project add in a Project Section

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PortFolio</title>
-    <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,200&family=Zilla+Slab:wght@300&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,200&family=Zilla+Slab:wght@300&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="Css/style.css">
     <link rel="stylesheet" href="Css/all.css">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
@@ -52,7 +52,7 @@
 
 
         </nav>
-       
+
         <div id="mainhead">
             <h1>Welcome To My <span style="color:rgba(14, 105, 180, 0.877)">PortFolio!</span></h1>
         </div>
@@ -71,10 +71,11 @@
         </div>
 
         <div class="Scrollbtn-main">
-         <a href="#AboutMe">  
-        <div class="Scrollbtn">  </div>
-        <div class="Scrollbtn">  </div>
-        <div class="Scrollbtn">  </div></a> 
+            <a href="#AboutMe">
+                <div class="Scrollbtn"> </div>
+                <div class="Scrollbtn"> </div>
+                <div class="Scrollbtn"> </div>
+            </a>
         </div>
 
     </section>
@@ -125,18 +126,30 @@
             </div>
 
             <div class="Projectsub">
-                <p>I made few interesting challenges using HTML5,CSS and Javascript(My Favourites are Snake Water Gun
-                    Game)Play and Enjoy!!<a href="https://akashkhandelwal191.github.io/SnakeWaterGunGame/"
-                        target="newtab">Click to see My Project:2</a> </p>
+                <p>I have made a responsive Cafe Site Using HTML5,CSS3 and Javascript With Parallax Scrolling
+                    behavior. Used jquery and a little bit of Bootstrap.It has Various Section Home,
+                    Gallery,Services,About Us and Contact Us.<a
+                        href="https://akashkhandelwal191.github.io/CafeSite/" target="newtab">Click to see My
+                        Project:2</a> </p>
             </div>
             <div class="Projectsub">
                 <p>Made Virtual Desktop Assistant using Python and Used lot of library for make this Assistant
                     Convenient named "Alexa"(Wolfram Alpha,Open WeatherAPI,NewsAPI,Speech
-                    Recognition,pysstx3,Wikipedia,etc.)<a
+                    Recognition,etc.)<a
                         href="https://github.com/Akashkhandelwal191/VirtualDesktopAssistant" target="newtab">Click to
                         see My
                         Project:3</a> </p>
             </div>
+
+
+            <div class="Projectsub">
+                <p>I have made a responsive Interview Based Quiz Website Using HTML5,CSS3 And Pure Javascript. Added lot of topic 
+                    related to Computer Science.<a
+                    href="https://akashkhandelwal191.github.io/InterviewQuiz/" target="newtab">Click to see My
+                    Project:4</a> </p>
+                </p>
+            </div>
+
             <div class="Projectsub">
                 <p>Made a personalised website showing what skills I have learned so far and some of my Projects that
                     done yet.You
