--- a/SocailMedia.html
+++ b/SocailMedia.html
@@ -97,13 +97,14 @@
             border-radius: 10%;
            }
        }
-       @media screen  and (max-width: 376px){
+       @media screen  and (max-width: 400px){
            ul li{
             margin: 0 0;
-            border-radius: 10%;
-            font-size: 20px;
+            border-radius: 12%;
+            font-size: 30px;
             height:50px;
             width:50px;
+            line-height: 50px;
            }
 
            ul li:hover::before
