Sass/SCSS section Added

--- a/index.html
+++ b/index.html
@@ -430,6 +430,25 @@
                                 </div>
                             </div>
                         </div>
+                        <br>
+                        <div class="text-center">
+                            <p>
+                                <strong>Preprocessor</strong>
+                            </p>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-6 col-sm-6 col-xs-6 ">
+                                <p class="ptag"> SASS / SCSS </p>
+                            </div>
+                            <div class="col-md-6 col-sm-6 col-xs-6 ">
+                                <div class="progress progress-striped active ">
+                                    <div class="progress progress-striped progress-bar progress-bar-info six-sec-ease-in-out "
+                                        role="progressbar" data-transitiongoal="60" style="width: 60%;"
+                                        aria-valuenow="70">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                         <div class="row">
                             <div class="col-md-6 col-sm-6 col-xs-6 ">
                                 <p class="ptag"> Jquery </p>
