Progress Bar hover added

--- a/index.html
+++ b/index.html
@@ -147,6 +147,7 @@
                                     <div class="progress progress-striped progress-bar progress-bar-info six-sec-ease-in-out "
                                         role="progressbar" data-transitiongoal="74" style="width: 74%;"
                                         aria-valuenow="74">
+                                        <div class="percentage">74%</div>
                                     </div>
                                 </div>
                             </div>
@@ -158,8 +159,9 @@
                             <div class="col-md-6 col-sm-6 col-xs-6 ">
                                 <div class="progress progress-striped active ">
                                     <div class="progress progress-striped progress-bar progress-bar-info six-sec-ease-in-out "
-                                        role="progressbar" data-transitiongoal="70" style="width: 70%;"
-                                        aria-valuenow="70">
+                                        role="progressbar" data-transitiongoal="50" style="width: 50%;"
+                                        aria-valuenow="50">
+                                        <div class="percentage">50%</div>
                                     </div>
                                 </div>
                             </div>
@@ -173,6 +175,7 @@
                                     <div class="progress progress-striped progress-bar progress-bar-info six-sec-ease-in-out "
                                         role="progressbar" data-transitiongoal="56" style="width: 56%;"
                                         aria-valuenow="56">
+                                        <div class="percentage">56%</div>
                                     </div>
                                 </div>
                             </div>
@@ -184,8 +187,9 @@
                             <div class="col-md-6 col-sm-6 col-xs-6 ">
                                 <div class="progress progress-striped active ">
                                     <div class="progress progress-striped progress-bar progress-bar-info six-sec-ease-in-out "
-                                        role="progressbar" data-transitiongoal="55" style="width: 55%;"
-                                        aria-valuenow="55">
+                                        role="progressbar" data-transitiongoal="70" style="width: 70%;"
+                                        aria-valuenow="70">
+                                        <div class="percentage">70%</div>
                                     </div>
                                 </div>
                             </div>
@@ -201,9 +205,10 @@
                             </div>
                             <div class="col-md-6 col-sm-6 col-xs-6 ">
                                 <div class="progress progress-striped active ">
-                                    <div class="progress progress-striped progress-bar progress-bar-info six-sec-ease-in-out "
+                                    <div class="progress progress-striped progress-bar progress-bar-info six-sec-ease-in-out"
                                         role="progressbar" data-transitiongoal="75" style="width: 75%;"
                                         aria-valuenow="75">
+                                        <div class="percentage">75%</div>
                                     </div>
                                 </div>
                             </div>
@@ -215,8 +220,9 @@
                             <div class="col-md-6 col-sm-6 col-xs-6 ">
                                 <div class="progress progress-striped active ">
                                     <div class="progress progress-striped progress-bar progress-bar-info six-sec-ease-in-out "
-                                        role="progressbar" data-transitiongoal="55" style="width: 55%;"
-                                        aria-valuenow="55">
+                                        role="progressbar" data-transitiongoal="65" style="width: 65%;"
+                                        aria-valuenow="65">
+                                        <div class="percentage">65%</div>
                                     </div>
                                 </div>
                             </div>
@@ -229,8 +235,9 @@
                             <div class="col-md-6 col-sm-6 col-xs-6 ">
                                 <div class="progress progress-striped active ">
                                     <div class="progress progress-striped progress-bar progress-bar-info six-sec-ease-in-out "
-                                        role="progressbar" data-transitiongoal="65" style="width: 65%;"
-                                        aria-valuenow="65">
+                                        role="progressbar" data-transitiongoal="60" style="width: 60%;"
+                                        aria-valuenow="60">
+                                        <div class="percentage">60%</div>
                                     </div>
                                 </div>
                             </div>
@@ -245,6 +252,7 @@
                                     <div class="progress progress-striped progress-bar progress-bar-info six-sec-ease-in-out "
                                         role="progressbar" data-transitiongoal="30" style="width: 30%;"
                                         aria-valuenow="30">
+                                        <div class="percentage">30%</div>
                                     </div>
                                 </div>
                             </div>
@@ -269,8 +277,9 @@
                             <div class="col-md-6 col-sm-6 col-xs-6 ">
                                 <div class="progress progress-striped active ">
                                     <div class="progress progress-striped progress-bar progress-bar-info six-sec-ease-in-out "
-                                        role="progressbar" data-transitiongoal="60" style="width: 60%;"
-                                        aria-valuenow="60">
+                                        role="progressbar" data-transitiongoal="70" style="width: 70%;"
+                                        aria-valuenow="70">
+                                        <div class="percentage">70%</div>
                                     </div>
                                 </div>
                             </div>
@@ -282,8 +291,9 @@
                             <div class="col-md-6 col-sm-6 col-xs-6 ">
                                 <div class="progress progress-striped active ">
                                     <div class="progress progress-striped progress-bar progress-bar-info six-sec-ease-in-out "
-                                        role="progressbar" data-transitiongoal="60" style="width: 60%;"
-                                        aria-valuenow="60">
+                                        role="progressbar" data-transitiongoal="50" style="width: 50%;"
+                                        aria-valuenow="50">
+                                        <div class="percentage">50%</div>
                                     </div>
                                 </div>
                             </div>
@@ -302,8 +312,9 @@
                             <div class="col-md-6 col-sm-6 col-xs-6 ">
                                 <div class="progress progress-striped active ">
                                     <div class="progress progress-striped progress-bar progress-bar-info six-sec-ease-in-out "
-                                        role="progressbar" data-transitiongoal="70" style="width: 70%;"
-                                        aria-valuenow="70">
+                                        role="progressbar" data-transitiongoal="90" style="width: 90%;"
+                                        aria-valuenow="90">
+                                        <div class="percentage">90%</div>
                                     </div>
                                 </div>
                             </div>
@@ -317,6 +328,7 @@
                                     <div class="progress progress-striped progress-bar progress-bar-info six-sec-ease-in-out "
                                         role="progressbar" data-transitiongoal="70" style="width: 70%;"
                                         aria-valuenow="70">
+                                        <div class="percentage">70%</div>
                                     </div>
                                 </div>
                             </div>
@@ -328,8 +340,9 @@
                             <div class="col-md-6 col-sm-6 col-xs-6 ">
                                 <div class="progress progress-striped active ">
                                     <div class="progress progress-striped progress-bar progress-bar-info six-sec-ease-in-out "
-                                        role="progressbar" data-transitiongoal="70" style="width: 70%;"
-                                        aria-valuenow="70">
+                                        role="progressbar" data-transitiongoal="80" style="width: 80%;"
+                                        aria-valuenow="80">
+                                        <div class="percentage">80%</div>
                                     </div>
                                 </div>
                             </div>
@@ -343,6 +356,7 @@
                                     <div class="progress progress-striped progress-bar progress-bar-info six-sec-ease-in-out "
                                         role="progressbar" data-transitiongoal="70" style="width: 70%;"
                                         aria-valuenow="70">
+                                        <div class="percentage">70%</div>
                                     </div>
                                 </div>
                             </div>
@@ -367,6 +381,7 @@
                                     <div class="progress progress-striped progress-bar progress-bar-info six-sec-ease-in-out "
                                         role="progressbar" data-transitiongoal="75" style="width: 75%;"
                                         aria-valuenow="75">
+                                        <div class="percentage">75%</div>
                                     </div>
                                 </div>
                             </div>
@@ -378,8 +393,9 @@
                             <div class="col-md-6 col-sm-6 col-xs-6 ">
                                 <div class="progress progress-striped active ">
                                     <div class="progress progress-striped progress-bar progress-bar-info six-sec-ease-in-out "
-                                        role="progressbar" data-transitiongoal="75" style="width: 75%;"
-                                        aria-valuenow="75">
+                                        role="progressbar" data-transitiongoal="85" style="width: 85%;"
+                                        aria-valuenow="85">
+                                        <div class="percentage">85%</div>
                                     </div>
                                 </div>
                             </div>
@@ -391,8 +407,9 @@
                             <div class="col-md-6 col-sm-6 col-xs-6 ">
                                 <div class="progress progress-striped active ">
                                     <div class="progress progress-striped progress-bar progress-bar-info six-sec-ease-in-out "
-                                        role="progressbar" data-transitiongoal="75" style="width: 75%;"
-                                        aria-valuenow="75">
+                                        role="progressbar" data-transitiongoal="70" style="width: 70%;"
+                                        aria-valuenow="70">
+                                        <div class="percentage">70%</div>
                                     </div>
                                 </div>
                             </div>
@@ -405,8 +422,9 @@
                             <div class="col-md-6 col-sm-6 col-xs-6 ">
                                 <div class="progress progress-striped active ">
                                     <div class="progress progress-striped progress-bar progress-bar-info six-sec-ease-in-out "
-                                        role="progressbar" data-transitiongoal="25" style="width: 25%;"
-                                        aria-valuenow="25">
+                                        role="progressbar" data-transitiongoal="80" style="width: 80%;"
+                                        aria-valuenow="80">
+                                        <div class="percentage">80%</div>
                                     </div>
                                 </div>
                             </div>
@@ -424,8 +442,9 @@
                             <div class="col-md-6 col-sm-6 col-xs-6 ">
                                 <div class="progress progress-striped active ">
                                     <div class="progress progress-striped progress-bar progress-bar-info six-sec-ease-in-out "
-                                        role="progressbar" data-transitiongoal="70" style="width: 70%;"
-                                        aria-valuenow="70">
+                                        role="progressbar" data-transitiongoal="80" style="width: 80%;"
+                                        aria-valuenow="80">
+                                        <div class="percentage">80%</div>
                                     </div>
                                 </div>
                             </div>
@@ -444,7 +463,8 @@
                                 <div class="progress progress-striped active ">
                                     <div class="progress progress-striped progress-bar progress-bar-info six-sec-ease-in-out "
                                         role="progressbar" data-transitiongoal="60" style="width: 60%;"
-                                        aria-valuenow="70">
+                                        aria-valuenow="60">
+                                        <div class="percentage">60%</div>
                                     </div>
                                 </div>
                             </div>
@@ -458,6 +478,7 @@
                                     <div class="progress progress-striped progress-bar progress-bar-info six-sec-ease-in-out "
                                         role="progressbar" data-transitiongoal="70" style="width: 70%;"
                                         aria-valuenow="70">
+                                        <div class="percentage">70%</div>
                                     </div>
                                 </div>
                             </div>
@@ -471,6 +492,7 @@
                                     <div class="progress progress-striped progress-bar progress-bar-info six-sec-ease-in-out "
                                         role="progressbar" data-transitiongoal="60" style="width: 60%;"
                                         aria-valuenow="60">
+                                        <div class="percentage">60%</div>
                                     </div>
                                 </div>
                             </div>
@@ -490,6 +512,7 @@
                                     <div class="progress progress-striped progress-bar progress-bar-info six-sec-ease-in-out "
                                         role="progressbar" data-transitiongoal="60" style="width: 60%;"
                                         aria-valuenow="60">
+                                        <div class="percentage">60%</div>
                                     </div>
                                 </div>
                             </div>
@@ -501,8 +524,9 @@
                             <div class="col-md-6 col-sm-6 col-xs-6 ">
                                 <div class="progress progress-striped active ">
                                     <div class="progress progress-striped progress-bar progress-bar-info six-sec-ease-in-out "
-                                        role="progressbar" data-transitiongoal="60" style="width: 60%;"
-                                        aria-valuenow="60">
+                                        role="progressbar" data-transitiongoal="50" style="width: 50%;"
+                                        aria-valuenow="50">
+                                        <div class="percentage">50%</div>
                                     </div>
                                 </div>
                             </div>
@@ -516,6 +540,7 @@
                                     <div class="progress progress-striped progress-bar progress-bar-info six-sec-ease-in-out "
                                         role="progressbar" data-transitiongoal="60" style="width: 60%;"
                                         aria-valuenow="60">
+                                        <div class="percentage">60%</div>
                                     </div>
                                 </div>
                             </div>
@@ -535,8 +560,9 @@
                             <div class="col-md-6 col-sm-6 col-xs-6 ">
                                 <div class="progress progress-striped active ">
                                     <div class="progress progress-striped progress-bar progress-bar-info six-sec-ease-in-out "
-                                        role="progressbar" data-transitiongoal="50" style="width: 50%;"
-                                        aria-valuenow="50">
+                                        role="progressbar" data-transitiongoal="90" style="width: 90%;"
+                                        aria-valuenow="90">
+                                        <div class="percentage">90%</div>
                                     </div>
                                 </div>
                             </div>
