--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </div>
 
     <!-- Scroll bottom to top Start -->
-    <i id="backtotop" class="fas fa-arrow-circle-up"></i>
+    <i id="backtotop" class="fas fa-arrow-circle-up hide"></i>
     <!-- Scroll bottom to top End -->
 
 
@@ -102,7 +102,7 @@
                 <a href="https://drive.google.com/file/d/1UGPzkZ82RAJQqXdTFWeD0QKDReQuMT3d/view?usp=sharing"
                     class="btn2">Download Resume</a>
             </div>
-            
+
 
             <div class="SocialMedia">
                 <h1>Connect With Me</h1>
@@ -662,10 +662,11 @@
 
     <!-- Contact Section Start -->
     <section id="contact">
-        <h4 class="h-unique"> Give Your <span style="color:rgba(17, 19, 20, 0.877)">Feedback </span>Here </h4>
-        <div><img src="Image/email.jpg" alt=""></div>
-        <h4 class="h-unique">Shoot me a <span style="color:rgba(1, 3, 5, 0.877)"> Message</span></h4>
-
+        <div id="contact-head">
+            <h4 class="h-unique"> Give Your <span style="color:rgba(17, 19, 20, 0.877)">Feedback </span>Here </h4>
+            <div><img src="Image/email.jpg" alt=""></div>
+            <h4 class="h-unique">Shoot me a <span style="color:rgba(1, 3, 5, 0.877)"> Message</span></h4>
+        </div>
         <div id="contact-box">
             <form id="my-form" action="https://formspree.io/f/xwkwyweo" method="POST">
                 <div class="form-group">
@@ -739,7 +740,7 @@
 
         var typed = new Typed('.type', {
 
-            strings: ['My Name is Akash Khandelwal.', 'I am a Software Developer.', 'I am a Programming Enthusiastic.','I am a Web Developer.','I   am   a   Youtuber.'],
+            strings: ['My Name is Akash Khandelwal.', 'I am a Software Developer.', 'I am a Programming Enthusiastic.', 'I am a Web Developer.', 'I   am   a   Youtuber.'],
             typeSpeed: 100,
             backSpeed: 70,
             loop: true,
@@ -803,6 +804,22 @@
 
 
     <script>
+
+
+        window.addEventListener('scroll', function () {
+
+            if (document.documentElement.scrollTop > 181) {
+
+                document.getElementById('backtotop').style.display = "block";
+            }
+
+            else{
+                document.getElementById('backtotop').style.display = "none";
+            }
+
+
+        })
+
 
         const topscroll = document.querySelector("#backtotop");
         topscroll.addEventListener("click", function () {
