--- a/index.html
+++ b/index.html
@@ -662,6 +662,23 @@
                 </p>
             </div>
 
+
+            <div class="Projectsub">
+                <p>I have made a responsive Keep Notes Web based Application Using HTML5,CSS3,Javascript And Bootstrap5.Using Concept 
+                    of local and Session Storage.<span class="badge bg-dark"><a class="text-warning"
+                            href="https://akashkhandelwal191.github.io/KeepNotes/" target="newtab">Click to see My
+                            Project:5</a></span></p>
+                </p>
+            </div>
+
+
+            <div class="Projectsub">
+                <p>I have made a responsive Music Player Using HTML5,CSS3,Javascript And Bootstrap5.<span class="badge bg-dark"><a class="text-warning"
+                            href="https://akashkhandelwal191.github.io/MusicPlayer/" target="newtab">Click to see My
+                            Project:6</a></span></p>
+                </p>
+            </div>
+
             <div class="Projectsub">
                 <p>Made a personalised website showing what skills I have learned so far and some of my Projects that
                     done yet.You
