--- a/index.html
+++ b/index.html
@@ -22,9 +22,8 @@
     <link rel="stylesheet" href="Css/style.css">
     <link rel="stylesheet" href="Css/all.css">
 
-    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
-        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script src="Js/jquery-3.6.0.min.js"></script>
+    
 
     <script>
         $(document).ready(function () {
