--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <link rel="stylesheet" href="Css/all.css">
 
     <!-- Jquery -->
-    <script src="Js/jquery-3.6.0.min.js"></script>
+    <script src="jquery-3.6.0.min.js"></script>
 
 
     <script>
@@ -891,7 +891,7 @@
             ]
         });
     </script>
-    <script src="js/script.js"></script>
+    <script src="script.js"></script>
 
 </body>
 
