--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <link rel="stylesheet" href="Css/all.css">
 
     <!-- Jquery -->
-    <script src="Js/jquery-3.6.0.min.js"></script>
+    <script src="jquery-3.6.0.min.js"></script>
 
 
     <script>
@@ -59,7 +59,7 @@
 
 </head>
 
-<body onload="setTimeout(myFunction,5000)">
+<body onload="setTimeout(myFunction,3000)">
     <div id="loader">
         <h1>Loading Akash PortFolio</h1>
     </div>
@@ -164,7 +164,7 @@
                 <br>
                 <h5>Here is What <span style="color:blue">I Have Learned so Far</span></h5>
             </header>
-            <div class="container my-5 moveanimation">
+            <div class="container my-5 moveanimation" data-aos="flip-up">
                 <div class="row">
                     <div class="col-md-5 col-sm-11 col-xs-11">
                         <h4 class="text-center">Concepts</h4><br>
@@ -614,7 +614,7 @@
             <h1 id="abouthead">Get To Know <span id="abouthead2">Me </span></h1>
             <div class="lined-bottom lined2"></div>
             <div id="image"><img src="Image/AkashKhandelwal.jpg" alt=""> </div>
-            <div id="content">
+            <div id="content" data-aos="zoom-in">
                 <div class="sub-content">
                     <p> <b>A Little Bit <span style="color:blue"> About Myself </span></b></p>
                     <p>Hi! myself Akash Khandelwal. I am completed my graduation in Bsc Computer Science from
@@ -727,7 +727,7 @@
                 <q style="font-size:1.5rem;" id="quote">Whatever you are, be a good one.</q>
                 <cite class="d-block" style="color:gray">-Abraham Lincoln</cite>
             </blockquote>
-            <div class="container">
+            <div class="container" data-aos="zoom-out">
                 <div class="row slider">
                     <div class="card col-md-12 mx-2 details">
                         <div class="img-container">
@@ -891,7 +891,7 @@
             ]
         });
     </script>
-    <script src="js/script.js"></script>
+    <script src="script.js"></script>
 
 </body>
 
