--- a/index.html
+++ b/index.html
@@ -667,7 +667,8 @@
                             behavior. Used jquery and a little bit of Bootstrap.It has Various Section Home,
                             Gallery,Services,About Us and Contact Us.</p>
 
-                        <a href="https://akashkhandelwal191.github.io/CafeSite/" target="newtab" class="btn btn4">Visit</a>
+                        <a href="https://akashkhandelwal191.github.io/CafeSite/" target="newtab"
+                            class="btn btn4">Visit</a>
                         <a href="https://github.com/Akashkhandelwal191/CafeSite" class="btn btn4">Source Code</a>
 
                     </div>
@@ -683,7 +684,8 @@
 
                         <a href="https://github.com/Akashkhandelwal191/VirtualDesktopAssistant" target="newtab"
                             class="btn btn4">Visit</a>
-                        <a href="https://github.com/Akashkhandelwal191/VirtualDesktopAssistant" class="btn btn4">Source Code</a>
+                        <a href="https://github.com/Akashkhandelwal191/VirtualDesktopAssistant" class="btn btn4">Source
+                            Code</a>
                     </div>
                 </div>
 
@@ -710,7 +712,8 @@
                         <p>I have made a responsive Keep Notes Web based Application Using HTML5,CSS3,Javascript And
                             Bootstrap5.Using Concept
                             of local and Session Storage.</p>
-                        <a href="https://akashkhandelwal191.github.io/KeepNotes/" target="newtab" class="btn btn4">Visit</a>
+                        <a href="https://akashkhandelwal191.github.io/KeepNotes/" target="newtab"
+                            class="btn btn4">Visit</a>
                         <a href="https://github.com/Akashkhandelwal191/KeepNotes" class="btn btn4">Source Code</a>
 
                     </div>
@@ -722,18 +725,20 @@
                 <div class="Projectsub" data-aos="fade-right">
                     <h4 class="headline">Music Player</h4>
                     <div class="ProjectContent">
-                    <p>I have made a responsive Music Player Using HTML5,CSS3,Javascript And Bootstrap5.</p>            
-                    <a href="https://akashkhandelwal191.github.io/MusicPlayer/" target="newtab" class="btn btn4">Visit</a>
-                    <a href="https://github.com/Akashkhandelwal191/MusicPlayer" class="btn btn4">Source Code</a>
+                        <p>I have made a responsive Music Player Using HTML5,CSS3,Javascript And Bootstrap5.</p>
+                        <a href="https://akashkhandelwal191.github.io/MusicPlayer/" target="newtab"
+                            class="btn btn4">Visit</a>
+                        <a href="https://github.com/Akashkhandelwal191/MusicPlayer" class="btn btn4">Source Code</a>
                     </div>
                 </div>
 
                 <div class="Projectsub" data-aos="fade-left">
                     <div class="ProjectContent">
-                    <p>Made a personalised website showing what skills I have learned so far and some of my Projects
-                        that
-                        done yet.You
-                        guessed it right! it's the one you are looking at right now(thought of mentioning it too:))</p>
+                        <p>Made a personalised website showing what skills I have learned so far and some of my Projects
+                            that
+                            done yet.You
+                            guessed it right! it's the one you are looking at right now(thought of mentioning it too:))
+                        </p>
                     </div>
                 </div>
 
@@ -844,6 +849,54 @@
 
         <!-- Footer Section Start -->
         <footer>
+            <div class="container my-3">
+
+                <div class="row">
+
+                    <div class="col-md-4">
+                        <h5 class="my-2">Quick Links</h5>
+                        <span class="footerlinks"><a href="#home">Home</a></span>
+                        <span class="footerlinks"><a href="#myskills">Skills</a></span>
+                        <span class="footerlinks"><a href="#AboutMe">AboutMe</a></span>
+                        <span class="footerlinks"><a href="#Project">Projects</a></span>
+                        <span class="footerlinks"><a href="#Blogs">Blog</a></span>
+                        <span class="footerlinks"><a href="#contact">Contact Us</a></span>
+                    </div>
+                    <div class="col-md-4">
+                        <h5 class="my-2">Social Media</h5>
+                        <span class="footerlinks"><a href="https://m.facebook.com/akash.khandelwal.1042?ref=bookmarks" target="_blank">Facebook</a></span>
+                        <span class="footerlinks"><a href="https://twitter.com/skykhandelwal26" target="_blank">Twitter</a></span>
+                        <span class="footerlinks"><a href="https://www.instagram.com/skykhandelwal1999" target="_blank">Instagram</a></span>
+                        <span class="footerlinks"><a href="https://www.linkedin.com/in/akash-khandelwal-5b09531aa" target="_blank">Linkedin</a></span>
+                        <span class="footerlinks"><a href="https://www.youtube.com/channel/UCW6rW8esjHbIMTccfbiJdPw" target="_blank">YouTube</a></span>
+                        <span class="footerlinks"><a href="https://github.com/Akashkhandelwal191" target="_blank">GitHub</a></span>
+                    </div>
+                    <div class="col-md-4">
+                        <h5 class="my-2">Get In Touch</h5>
+                        <div class="footer-contact">
+                        <span class="mx-2"><i class="fas fa-user"></i></span>
+                        <span>Akash Khandelwal</span>
+                        </div>
+                        <div class="footer-contact">
+                            <span class="mx-2"><i class="fas fa-map-marker-alt"></i></span>
+                            <span>Jabalpur,Madhya Pradesh,India</span>
+                        </div>
+                        <div class="footer-contact">
+                            <span class="mx-2"><i class="fas fa-phone"></i></span>
+                            <span><a href="tel:9993869873">+91 9993869873</a></span>
+                        </div>
+                        <div class="footer-contact">
+                            <span class="mx-2"><i class="fas fa-envelope"></i></span>
+                            <span><a href="mailto:skykhandelwal1999@gmail.com">
+                                skykhandelwal1999@gmail.com</a></span>
+                        </div>
+                      
+                    </div>
+
+                </div>
+
+
+            </div>
             <div class="center">
                 Copyright &copy; Akash Khandelwal. All rights reserved!
             </div>
@@ -888,8 +941,8 @@
                 {
                     breakpoint: 1024,
                     settings: {
-                        slidesToShow: 3,
-                        slidesToScroll: 3,
+                        slidesToShow: 2,
+                        slidesToScroll: 1,
                         infinite: true,
                         dots: true
                     }
