Grammer Mistake Rectify

--- a/index.html
+++ b/index.html
@@ -617,7 +617,7 @@
             <div id="content" data-aos="zoom-in">
                 <div class="sub-content">
                     <p> <b>A Little Bit <span style="color:blue"> About Myself </span></b></p>
-                    <p>Hi! myself Akash Khandelwal. I am completed my graduation in Bsc Computer Science from
+                    <p>Hi! myself Akash Khandelwal. I have completed my graduation in Bsc Computer Science from
                         St. Aloysius College Jabalpur. I had completed my Matriculation and Intermediate
                         from Vaishnavi Public School,Nowrozabad Distt Umaria and secured 78% in MP board and 83% in
                         MP board respectively.</p>
